# samconf

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONFIG.ini  Jenkinsfile  README.md
.github/workflows/: build-documentation.yml
ci/: Dockerfile  build.sh  build_doc.sh  checklicense.sh  clean.sh  create_coverage.sh  dependencies_default.json  dependencies_emlix.json  docker-run.sh  install_deps.py  publish_kpis.sh  run_smoketests.sh  run_utest.sh
cmake/: ConfigureLibrary.cmake  Packing.cmake  index.rst  project.cmake
src/: CMakeLists.txt
src/demo/: CMakeLists.txt
src/samconf/: CMakeLists.txt  Config.cmake.in
src/samconf/public/samconf/: config_backend.h  crypto_utils.h  json_backend.h  samconf.h  signature.h  uri.h
test/coverage/: run_asmcov.sh
test/utest/: CMakeLists.txt
test/utest/mocks/: CMakeLists.txt
test/utest/samconf/json_backend/samconfJsonBackendClose/: CMakeLists.txt
test/utest/samconf/json_backend/samconfJsonBackendSupports/: CMakeLists.txt
test/utest/samconf/samconf/samconfConfigSetString/: CMakeLists.txt
